# sqlsoup2

./: .gitignore  README.md  pyproject.toml  sqlsoup2.py
.github/workflows/: code_formatter.yml
tests/: __init__.py  test_sqlsoup.py
