[project]
name = "sqlsoup2"
dynamic = ["version"]
description = "Public archived python library sqlsoup's Follow-up projects for compatibility resolution."
readme = "README.md"
requires-python = ">=3.6.0"
license = "MIT"
authors = [
    { name = "gyudoza", email = "jujumilk3@gmail.com" },
]
classifiers = [
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "sqlalchemy",
]

[project.urls]
homepage = "https://github.com/jujumilk3/sqlsoup2"
bug-tracker = "https://github.com/jujumilk3/sqlsoup2/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "black",
    "isort"
]
dev = [
    "pytest",
    "twine",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "sqlsoup2.py"

packages=["sqlsoup2"]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
